GNOME Bugzilla – Bug 658503
Fix invalid signal message in mclasen's .xsession-errors
Last modified: 2011-09-08 14:20:27 UTC
It looks like app-state-changed changed from one object to another.
Created attachment 195927 [details] [review] apps: handle 'app-state-changed' move in shell-app-usage commit 0af108211c4f5d3511b085313587e8d5541e51bb moved which object the app-state-changed signal is emitted from. This commit updates shell-app-usage.c to keep up with the times.
Review of attachment 195927 [details] [review]: Looks obviously correct.
Attachment 195927 [details] pushed as 98649f9 - apps: handle 'app-state-changed' move in shell-app-usage