apps: handle 'app-state-changed' move in shell-app-usage

commit 0af108211c4f5d3511b085313587e8d5541e51bb moved which
object the app-state-changed signal is emitted from.

This commit updates shell-app-usage.c to keep up with the times.

https://bugzilla.gnome.org/show_bug.cgi?id=658503